syntax = "proto3";
package comdex.locker.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/locker/v1beta1/locker.proto";
import "comdex/locker/v1beta1/params.proto";
import "comdex/asset/v1beta1/asset.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package            = "github.com/comdex-official/comdex/x/locker/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

service Query {

  rpc QueryLockerInfo(QueryLockerInfoRequest) returns (QueryLockerInfoResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker_info/{id}";
  };

  rpc QueryLockersByProductToAssetID(QueryLockersByProductToAssetIDRequest) returns (QueryLockersByProductToAssetIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/lockers_info_asset_id/{product_id}/{asset_id}";
  };

  rpc QueryLockerInfoByProductID(QueryLockerInfoByProductIDRequest) returns (QueryLockerInfoByProductIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/lockers_info_product_id/{product_id}";
  };


 rpc QueryTotalDepositByProductAssetID(QueryTotalDepositByProductAssetIDRequest) returns (QueryTotalDepositByProductAssetIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/total_deposit_product_asset_id/{product_id}/{asset_id}";
  };

  rpc QueryOwnerLockerByProductIDbyOwner(QueryOwnerLockerByProductIDbyOwnerRequest) returns (QueryOwnerLockerByProductIDbyOwnerResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/owner_locker_by_all_product_by_owner/{product_id}/{owner}";
  };

  rpc QueryOwnerLockerOfAllProductByOwner(QueryOwnerLockerOfAllProductByOwnerRequest) returns (QueryOwnerLockerOfAllProductByOwnerResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/owner_locker_info_by_all_product_owner/{owner}";
  };

  rpc QueryOwnerTxDetailsLockerOfProductByOwnerByAsset(QueryOwnerTxDetailsLockerOfProductByOwnerByAssetRequest) returns (QueryOwnerTxDetailsLockerOfProductByOwnerByAssetResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/owner_locker_tx-details_by_product/{product_id}/{owner}/{asset_id}";
  };

 rpc QueryOwnerLockerByProductToAssetIDbyOwner(QueryOwnerLockerByProductToAssetIDbyOwnerRequest) returns (QueryOwnerLockerByProductToAssetIDbyOwnerResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/owner_locker_info_product_asset_id_owner/{product_id}/{asset_id}/{owner}";
  };

  rpc QueryLockerByProductByOwner(QueryLockerByProductByOwnerRequest) returns (QueryLockerByProductByOwnerResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker_info_product_owner/{product_id}/{owner}";
  };

 rpc QueryLockerCountByProductID(QueryLockerCountByProductIDRequest) returns (QueryLockerCountByProductIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/total_locker_product_id/{product_id}";
  };

  rpc QueryLockerCountByProductToAssetID(QueryLockerCountByProductToAssetIDRequest) returns (QueryLockerCountByProductToAssetIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/total_locker_product_asset_id/{product_id}/{asset_id}";
  };

  rpc QueryWhiteListedAssetIDsByProductID(QueryWhiteListedAssetIDsByProductIDRequest) returns (QueryWhiteListedAssetIDsByProductIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/whitelisted_asset_ids_by_product_id/{product_id}";
  };

  rpc QueryWhiteListedAssetByAllProduct(QueryWhiteListedAssetByAllProductRequest) returns (QueryWhiteListedAssetByAllProductResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/whitelisted_asset_product_id";
  };

  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/params";
  };

  rpc QueryLockerLookupTableByApp(QueryLockerLookupTableByAppRequest) returns (QueryLockerLookupTableByAppResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker-lookup-by-app/{app_id}";
  };

  rpc QueryLockerLookupTableByAppAndAssetId(QueryLockerLookupTableByAppAndAssetIdRequest) returns (QueryLockerLookupTableByAppAndAssetIdResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker-lookup-by-app-and-assetId/{app_id}/{asset_id}";
  };

  rpc QueryLockerTotalDepositedByApp(QueryLockerTotalDepositedByAppRequest) returns (QueryLockerTotalDepositedByAppResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker-deposited-by-app/{app_id}";
  };

  rpc QueryState(QueryStateRequest) returns (QueryStateResponse){};
}

message QueryLockerInfoRequest {
  string id = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryLockerInfoResponse {
  Locker locker_info = 1[
    (gogoproto.moretags)   = "yaml:\"locker_info\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryLockersByProductToAssetIDRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryLockersByProductToAssetIDResponse {
  repeated string locker_ids = 1 [ (gogoproto.moretags) = "yaml:\"locker_ids\"" ];
}

message QueryLockerInfoByProductIDRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
}

message QueryLockerInfoByProductIDResponse {
  repeated string locker_ids = 1 [ (gogoproto.moretags) = "yaml:\"locker_ids\"" ];
}

message QueryTotalDepositByProductAssetIDRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryTotalDepositByProductAssetIDResponse {
  uint64 total_deposit = 1;
}

message QueryOwnerLockerByProductIDbyOwnerRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryOwnerLockerByProductIDbyOwnerResponse {
  repeated string locker_ids = 1 [ (gogoproto.moretags) = "yaml:\"locker_ids\"" ];
}

message QueryOwnerLockerOfAllProductByOwnerRequest {
  string owner = 3 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryOwnerLockerOfAllProductByOwnerResponse {
  repeated string locker_ids = 1 [ (gogoproto.moretags) = "yaml:\"locker_ids\"" ];
}

message QueryOwnerTxDetailsLockerOfProductByOwnerByAssetRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 asset_id = 3 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 4
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryOwnerTxDetailsLockerOfProductByOwnerByAssetResponse {
  repeated UserTxData user_tx_data = 1 [ (gogoproto.moretags) = "yaml:\"user_tx_data\""];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryOwnerLockerByProductToAssetIDbyOwnerRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
  string owner = 3 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryOwnerLockerByProductToAssetIDbyOwnerResponse {
  repeated Locker locker_info = 1[
    (gogoproto.moretags)   = "yaml:\"locker_info\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryLockerByProductByOwnerRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryLockerByProductByOwnerResponse {
  repeated Locker locker_info = 1[
    (gogoproto.moretags)   = "yaml:\"locker_info\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryLockerCountByProductIDRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
}

message QueryLockerCountByProductIDResponse {
  uint64 total_count = 1;
}

message QueryLockerCountByProductToAssetIDRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryLockerCountByProductToAssetIDResponse {
  uint64 total_count = 1;
}

message QueryWhiteListedAssetIDsByProductIDRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
}

message QueryWhiteListedAssetIDsByProductIDResponse {
  repeated uint64  asset_ids = 1;
}

message QueryWhiteListedAssetByAllProductRequest {
}

message QueryWhiteListedAssetByAllProductResponse {

  repeated ProductToAllAsset product_to_all_asset = 1 [
    (gogoproto.moretags) = "yaml:\"product_to_all_asset\"",
    (gogoproto.nullable) = false
  ];
}

message ProductToAllAsset {

  uint64  product_id = 1;
  repeated comdex.asset.v1beta1.Asset assets = 2 [
    (gogoproto.moretags) = "yaml:\"assets\"",
    (gogoproto.nullable) = false
  ];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

message QueryLockerLookupTableByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryLockerLookupTableByAppResponse {
  repeated TokenToLockerMapping token_to_locker_mapping = 1 [ (gogoproto.moretags) = "yaml:\"token_to_locker_mapping\"" ];
}

message QueryLockerLookupTableByAppAndAssetIdRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryLockerLookupTableByAppAndAssetIdResponse {
  TokenToLockerMapping token_to_locker_mapping = 1 [ (gogoproto.moretags) = "yaml:\"token_to_locker_mapping\"" ];
}

message QueryLockerTotalDepositedByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryLockerTotalDepositedByAppResponse {
 repeated LockedDepositedAmountDataMap locked_deposited_amount_data_map =1 [ (gogoproto.moretags) = "yaml:\"locked_deposited_amount_data_map\"",
 (gogoproto.nullable) = false ];
}

message QueryStateRequest{
  string address = 1;
  string denom = 2;
  string height = 3;
  string target = 4;
}

message QueryStateResponse{
  cosmos.base.v1beta1.Coin amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}